# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE
.aws/: ecs-task-definition.json
.cargo/: config.toml
.github/workflows/: aws.yml  general.yml
.sqlx/: query-25dae8f3ed1a32603e344356d3f684bc2a6d70674ed9f36c0d76de92913531ec.json
migrations/: 20250826112337_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
